# MonikAI

./: .gitignore  CMakeLists.txt  README.md
MonikAI/: main.cpp  mainWindow.cpp  mainWindow.h
docs/: MonikAI English (Original) - Applications.csv  MonikAI English (Original) - Google Searches.csv  MonikAI English (Original) - Idle Dialogue.csv  MonikAI English (Original) - Startup.csv  idle_dialogue.csv
source/: mainWindow.cpp
